# old-gods

./: Cargo.toml  README.md  rustfmt.toml
.ci/: common.sh  lint.sh  test.sh
.github/workflows/: clippy.yml  rust.yaml
examples/loading-maps/: .gitignore  Cargo.toml  `  index.html
examples/loading-maps/maps/: audio_test.json  collision_detection.json  door_test.json  full_test.json  generic_tiled_test.json  tiles_test.json  treasure_chest.json
examples/loading-maps/src/: README.md  components.rs  ecs.rs  fetch.rs  lib.rs  render.rs  systems.rs
old_gods/: Cargo.toml  architecture.md
old_gods/manual/: book.toml
old_gods/manual/book/: index.html  intro.html  map_creation.html  print.html  searchindex.js  searchindex.json  setup.html
old_gods/manual/src/: SUMMARY.md  contributors.md  intro.md  map_creation.md  setup.md
old_gods/manual/src/map_creation/: actions.md  background_tiles.md  barriers.md  objects.md  sprites.md
old_gods/src/: color.rs  components.rs  engine.rs  fetch.rs  image.rs  lib.rs  parser.rs  rendering.rs  resource_manager.rs  resources.rs  sound.rs  systems.rs  time.rs  utils.rs
old_gods/src/color/: css.rs
old_gods/src/components/: action.rs  attributes.rs  cardinal.rs  exile.rs  font_details.rs  mod.rs  path.rs  player.rs  rendering.rs  sprite.rs  tiled.rs
old_gods/src/geom/: aabb.rs  aabb_tree.rs  line.rs  mod.rs  shape.rs  v2.rs
old_gods/src/prelude/: mod.rs
old_gods/src/rendering/: action.rs  standard.rs
old_gods/src/rendering/standard/: action.rs
old_gods/src/systems/: animation.rs  fence.rs  gamepad.rs  message.rs  mod.rs  player.rs  screen.rs  sound.rs  tiled.rs  tween.rs  ui.rs  zone.rs
old_gods/src/systems/action/: mod.rs
old_gods/src/systems/effect/: mod.rs
old_gods/src/systems/inventory/: mod.rs  record.rs
old_gods/src/systems/item/: mod.rs  record.rs
old_gods/src/systems/map_loader/: load.rs  map_loader.rs  mod.rs
old_gods/src/systems/physics/: mod.rs
old_gods/src/systems/player/: mod.rs  record.rs
old_gods/src/systems/rendering/: debug.rs  mod.rs  render.rs  text.rs  ui.rs
old_gods/src/systems/script/: container.rs  door.rs  mod.rs
old_gods/src/systems/sprite/: mod.rs  record.rs  warp.rs
old_gods/src/systems/zone/: mod.rs
old_gods/src/tiled/: json.rs
old_gods/test_data/: layer_groups.json
(+22 files in other folders)
