[lib]
crate-type = ["cdylib", "rlib"]

[package]
name = "old_gods"
version = "0.0.0"
authors = ["Schell Scivally <efsubenovex@gmail.com>"]
edition = "2018"
features = ["alloc"]

[dependencies]
either = "1.5.2"
js-sys = "0.3"
log = "0.4"
nom = "5.0.0-beta2"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_path_to_error = { version = "0.1", optional = true }
shrev = "1.0"
shred-derive = "0.6"
spade = "1.5.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"


[dependencies.web-sys]
version = "0.3"
features = [
  "AudioContext",
  "AudioDestinationNode",
  "Blob",
  "CanvasRenderingContext2d",
  "console",
  "Document",
  "ErrorEvent",
  "FileList",
  "FileReader",
  "Gamepad",
  "GamepadButton",
  "HtmlAudioElement",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "HtmlMediaElement",
  "KeyboardEvent",
  "Location",
  "MediaElementAudioSourceNode",
  "Navigator",
  "Performance",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "TextMetrics",
  "Window"
]
#[dependencies.sdl2]
#version = "0.32.0"
#default-features = false
#features = [ "mixer", "image", "ttf" ]

[dependencies.specs]
version = "0.16"
default-features = false
features = ["shred-derive"]


[dependencies.shred]
version = "0.9.3"
default-features = false
features = ["nightly"]


[features]
default = ["serde_path_to_error"]
